2008-09-27  Colin Leroy  <colin@colino.net>

	* configure.ac,
	src/Makefile.am,
	include/config.nsi.in,
	src/inst-sections.nsi,
	packages/packages.current: Add libxml2 for Claws plugins.
	* src/inst-libxml2.nsi, src/uninst-libxml2.nsi,
	New files for libxml2.

2008-09-27  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update claws (fixes its build).

2008-09-27  Colin Leroy  <colin@colino.net>

	* configure.ac,
	src/Makefile.am,
	include/config.nsi.in,
	src/gpg4win.nsi,
	src/inst-sections.nsi,
	packages/packages.current: Add Curl, Claws plugins Gtkhtml,
	Vcalendar and Notification.
	* src/inst-curl.nsi, src/uninst-curl.nsi,
	src/inst-gtkhtml2_viewer.nsi, src/uninst-gtkhtml2_viewer.nsi,
	src/inst-vcalendar.nsi, src/uninst-vcalendar.nsi,
	src/inst-notifiation_plugin.nsi, src/uninst-notification_plugin.nsi:
	New files for these new packages

2008-09-25  Colin Leroy  <colin@colino.net>

	* src/Makefile.am (gpg4win_pkg_claws_mail_configure): Add
	--disable-dbus.  No more patches!
	* packages/packages.current: Update claws and change claws
	and libetpan's sources.

2008-09-22  Marcus Brinkmann  <marcus@g10code.com>

	* src/Makefile.am (gpg4win_pkg_claws_mail_configure): Add
	--disable-enchant.

2008-09-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libksba.
	* THANKS:  Update.
	
2008-09-19  Marcus Brinkmann  <marcus@g10code.com>

	* configure.ac: Add gnutls as dependency for libetpan.
	* src/Makefile.am (gpg4win_pkg_libetpan_configure): Add --with-gnutls.
	Submitted by Colin Leroy.
	* packages/packages.current: Update claws and libetpan.
	* THANKS: New file.
	* Makefile.am (EXTRA_DIST): Add ...
	* patches/claws-mail-3.5.0cvs114/01-gtk-input-add.patch,
	patches/claws-mail-3.5.0cvs114/02-pgpcore.patch,
	patches/claws-mail-3.5.0cvs114/03-smime.patch,
	patches/claws-mail-3.5.0cvs114/99-auto.patch: ... these new files.

2008-09-18  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libgcrypt.
