@@ -152,6 +152,10 @@
 !define gpg4win_pkg_vcalendar @gpg4win_pkg_vcalendar@
 !define gpg4win_pkg_vcalendar_version @gpg4win_pkg_vcalendar_version@
 
+@HAVE_PKG_RSSYL@
+!define gpg4win_pkg_rssyl @gpg4win_pkg_rssyl@
+!define gpg4win_pkg_rssyl_version @gpg4win_pkg_rssyl_version@
+
 #@HAVE_PKG_EUDORAGPG@
 #!define gpg4win_pkg_eudoragpg @gpg4win_pkg_eudoragpg@
 #!define gpg4win_pkg_eudoragpg_version @gpg4win_pkg_eudoragpg_version@
